# furry-embeddings

./: LICENSE  README.md  pyproject.toml
src/furry_embeddings/: model.py  tags.py
